fix wrap-main problem and footer

--- a/app/assets/stylesheets/partials/users/_rsvp.scss
+++ b/app/assets/stylesheets/partials/users/_rsvp.scss
@@ -1,6 +1,10 @@
 @import 'partials/colorScheme';
 @import 'partials/fonts';
 
+#wrap-rsvp {
+  min-height: calc(100vh - 59px);  
+}
+
 #rsvp{
   background-color: transparent;
   @media (max-width: 550px) {
@@ -252,7 +256,7 @@
     } 
   }  
 
-  #upload-resume-wrap, #upload-form-wrap {
+  #upload-resume-wrap {
     display: flex;
     display: -webkit-flex;
     justify-content: space-around;
@@ -439,7 +443,6 @@
   }
 
   #save-rsvp {
-    margin-bottom: 100px;
     @media (max-width: 910px) {
       margin-bottom: 0px;
     }
